--- a/index.html
+++ b/index.html
@@ -68,15 +68,37 @@
         </div>
         <img src="/assets/hero-leaf2.png" alt="" class="">
     </section>
-    <section>
+    <section class="mx-[135px] mt-[100px]">
       <h1 class="text-center text-[32px] font-bold text-[#1F2937] mb-[40px]">Choose Your Trees</h1>
-      <div class="flex flex-cols-3">
+      <div class="flex flex-cols-3 gap-[30px]">
         <div class="w-[250px] h-auto">
           <h2 class="text-[#000000] font-bold text-[20px]">Categories</h2>
           <div id="cate-container"></div>
         </div>
-        <div class="w-[1090px] h-auto border " id="all-container"></div>
-        <div></div>
+        <div class="w-[1090px] max-h-[880px]  grid grid-cols-3  gap-[30px] overflow-y-auto" id="all-container"></div>
+        <div class="w-[250px] max-h-[880px] overflow-y-auto border bg-white">
+          <h3 class="text-[20px] font-bold text-black mx-[16px] mt-[16px]">Your Cart</h3>
+        </div>
+    </div>
+    </section>
+    <section class="max-w-[1090px] mx-auto h-[610px] mt-[100px]">
+      <h2 class="font-bold text-[32px] text-black text-center">About the Campaign</h2>
+      <div class="mt-[40px] flex gap-[30px]">
+        <img src="./assets/about.png" alt="" class="w-[530px] h-[530px]">
+        <div class="mt-[170px] text-[16px] text-[#1F2937] opacity-70">
+          <p>Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
+          <ul class="list-disc list-inside mt-[20px]"><li>Restoration of natural habitats</li>
+          <li>Improvement of air quality</li>
+          <li>Support for local communities</li></ul>
+        </div>
+      </div>
+    </section>
+    <section class="w-100% h-[436px] mt-[100px] bg-[#CFF0DC]">
+      <h3 class="text-[32px] text-[#1F2937] font-bold text-center pt-[100px]">Our Impact</h3>
+      <div class="flex gap-[50px] mx-[135px] mt-[40px]">
+        <div class="w-[517px] h-[156px] bg-white text-center py-[40px]"><h2 class="text-[20px] text-green-700 font-bold">500K+</h2><p class="mt-[12px] text-[16px] text-[#1F2937] opacity-80">Trees Planted</p></div>
+        <div class="w-[517px] h-[156px] bg-white text-center py-[40px]"><h2 class="text-[20px] text-green-700 font-bold">120+</h2><p class="mt-[12px] text-[16px] text-[#1F2937] opacity-80">Communities Involved</p></div>
+        <div class="w-[517px] h-[156px] bg-white text-center py-[40px]"><h2 class="text-[20px] text-green-700 font-bold">30+</h2><p class="mt-[12px] text-[16px] text-[#1F2937] opacity-80">Countries Reached</p></div>
     </div>
     </section>
 
