--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
         <div class="w-[517px] h-[156px] bg-white text-center py-[40px]"><h2 class="text-[20px] text-green-700 font-bold">30+</h2><p class="mt-[12px] text-[16px] text-[#1F2937] opacity-80">Countries Reached</p></div>
     </div>
     </section>
+    <section class="w-100% h-[591px] bg-[#166534]">
+      <h1 class="text-[32px] text-white font-semibold text-center pt-[100px]">Plant a Tree Today</h1>
+      <div class="max-w-[650px] mx-auto bg-[#15803D] mt-[40px] flex flex-col justify-center items-center py-[40px] text-[16px]">
+        <input type="text" placeholder="Your Name" class="input input-sm w-[570px] h-[48px] placeholder-[#818891] placeholder-opacity-50" />
+        <input type="text" placeholder="Your Email Adress" class="input input-sm w-[570px] h-[48px] mt-[12px] placeholder-[#818891] placeholder-opacity-50" />
+        <input type="text" placeholder="Number of Trees" class="input input-sm w-[570px] h-[48px] mt-[12px] placeholder-black font-semibold" />
+        <button class="btn rounded-[999px] text-[#15803D] bg-[#FACC15] mt-[20px] w-[570px] h-[43px]">Donate Now</button>
+      </div>
+    </section>
+    <footer class="footer sm:footer-horizontal footer-center bg-base-300 text-base-content p-4 h-[72px] w-100% bg-[#14532D] text-white">
+      <aside>
+      <p>© 2025 Green Earth. All Rights Reserved.</p>
+      </aside>
+    </footer>
 
     <!-- JS file  -->
      <script src="/main.js"></script>
