--- a/index.html
+++ b/index.html
@@ -96,6 +96,24 @@
         </div>
       </div>
     </section>
+
+<!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+<dialog id="my_modal_1" class="modal">
+  <div class="modal-box" > 
+
+    <div id="details-container">
+      
+    </div>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
+
     <section class="w-100% h-[436px] mt-[100px] bg-[#CFF0DC]">
       <h3 class="text-[32px] text-[#1F2937] font-bold text-center pt-[100px]">Our Impact</h3>
       <div class="flex gap-[50px] mx-[135px] mt-[40px]">
